# ChangeLog for app-arch/dpkg
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.43 2007/01/02 14:20:33 masterdriverz Exp $

*dpkg-1.13.24 (02 Jan 2007)

  02 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  -files/dpkg-1.10.26.patch, -files/dpkg-1.10.27.gcc4.patch,
  -dpkg-1.10.28.ebuild, +dpkg-1.13.24.ebuild:
  Bump to 1.13.24, remove old cruft; bug 144355

  18 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> dpkg-1.13.11.ebuild:
  Stable on alpha.

  09 Aug 2006; Jeroen Roovers <jer@gentoo.org> dpkg-1.13.11.ebuild:
  Stable for HPPA (bug #134279).

  31 Jul 2006; Jason Wever <weeve@gentoo.org> dpkg-1.13.11.ebuild:
  Stable on SPARC wrt bug #134279.

  28 Jul 2006; Luis Medinas <metalgod@gentoo.org> dpkg-1.13.11.ebuild:
  Stable on amd64 see bug #134279.

  23 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> dpkg-1.13.11.ebuild:
  ppc stable, bug #134279

  21 Jul 2006; Joshua Jackson <tsunam@gentoo.org> dpkg-1.13.11.ebuild:
  Stable x86; bug #134279

  29 Jun 2006; Alec Warner <antarus@gentoo.org> metadata.xml,
  dpkg-1.10.28.ebuild, dpkg-1.13.11.ebuild:
  removing duff dependency on gettext for bug # 134561

*dpkg-1.13.11 (29 Aug 2005)

  29 Aug 2005; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  +dpkg-1.13.11.ebuild:
  Version bump to fix md5sum manpage collision.

  07 Jul 2005; Danny van Dyk <kugelfang@gentoo.org>
  files/dpkg-1.10.27.gcc4.patch:
  Fixed BUG #96394 by replacing bogus gcc-4 patch.

*dpkg-1.10.28 (31 May 2005)

  31 May 2005; Mike Frysinger <vapier@gentoo.org> +dpkg-1.10.28.ebuild:
  Version bump.

  26 May 2005; Jose Luis Rivero <yoswink@gentoo.org> dpkg-1.10.27.ebuild:
  Keyworded ~alpha due to #90833

  05 May 2005; Heinrich Wendel <lanius@gentoo.org>
  +files/dpkg-1.10.27.gcc4.patch, dpkg-1.10.27.ebuild:
  ebuild cleanups; gcc-4 patch

*dpkg-1.10.27 (04 May 2005)

  04 May 2005; Heinrich Wendel <lanius@gentoo.org>